[package]
name = "test_task"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
opencv = "0.69.0"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
url = "2.2.2"
anyhow = "1.0.65"